# browser-rs-mcp

./: .gitignore  Cargo.toml  DESIGN.md  INSTALL.md  README.md  install.sh
.github/workflows/: ci.yml  release.yml
bench/: detector.html  external.mjs  hard.mjs  rebrowser.mjs  run.mjs
crates/ab-browser/: Cargo.toml
crates/ab-browser/examples/: smoke.rs
crates/ab-browser/src/: lib.rs  snapshot.rs  stealth.rs
crates/ab-cdp/: Cargo.toml
crates/ab-cdp/src/: lib.rs
crates/ab-mcp/: Cargo.toml
crates/ab-mcp/src/: main.rs
scripts/: mcp-smoke.mjs  tab-ownership-smoke.mjs
