[package]
name = "ab-browser"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
ab-cdp.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
reqwest.workspace = true
base64.workspace = true

[dev-dependencies]
tracing-subscriber.workspace = true

[[example]]
name = "smoke"
path = "examples/smoke.rs"
